--- a/ui/src/assets/main.css
+++ b/ui/src/assets/main.css
@@ -20,6 +20,37 @@ h4 {
   font-weight: 600;
 }
 
+.light-text {
+  color: var(--light-secondary);
+}
+.gray-text {
+  color: var(--dark-secondary);
+}
+.logo-blue {
+  color: var(--primary);
+  font-weight: 700;
+  letter-spacing: 0.5px;
+}
+
+.btn {
+  padding: 1.4rem;
+  border-radius: 8px;
+  font-weight: 500;
+  border: none;
+  background: var(--cta);
+  color: var(--primary);
+  cursor: pointer;
+  transition: all 0.5s ease;
+}
+
+.btn-blue {
+  background-color: var(--primary-light-text);
+}
+
+.btn-blue:hover {
+  background-color: var(--primary);
+  color: white;
+}
 /*  FORMS  */
 
 label {
