impl search bar

--- a/ui/src/assets/base.css
+++ b/ui/src/assets/base.css
@@ -4,12 +4,14 @@
   --primary-light: #e2f1ff;
   --primary-light-text: #6db9ff;
   --primary-text: #2f3337;
+  --secondary-text: #575f66;
 
   --cta: #ffd60a;
   --dark-cta: #ffc300;
   --disabled-cta: rgba(255, 214, 10, 0.5);
   --warning: #ff6d6d;
   --light-secondary: #cccdd2;
+  --light-gray: #f4f4f5;
   --dark-secondary: #2a2a2f;
 }
 
